syntax = "proto2";
package openscq30;

import "device_profile.proto";
import "battery.proto";
import "equalizer_configuration.proto";
import "sound_modes.proto";
import "hear_id.proto";
import "firmware_version.proto";
import "custom_button_model.proto";

option java_package = "com.oppzippy.openscq30.lib.protobuf";
option java_multiple_files = true;

message DeviceState {
  required DeviceProfile device_profile = 1;
  required Battery battery = 2;
  required EqualizerConfiguration equalizer_configuration = 3;
  optional SoundModes sound_modes = 4;
  optional uint32 age_range = 5;
  optional uint32 gender = 6;
  optional HearId hear_id = 7;
  optional FirmwareVersion firmware_version = 8;
  optional CustomButtonModel custom_button_model = 9;
  optional string serial_number = 10;
  optional AmbientSoundModeCycle ambient_sound_mode_cycle = 11;
}
