syntax = "proto2";
package openscq30;

option java_package = "com.oppzippy.openscq30.lib.protobuf";
option java_multiple_files = true;

enum AmbientSoundMode {
  NOISE_CANCELING = 0;
  TRANSPARENCY = 1;
  NORMAL = 2;
}

enum NoiseCancelingMode {
  TRANSPORT = 0;
  INDOOR = 1;
  OUTDOOR = 2;
  CUSTOM = 3;
}

enum TransparencyMode {
  FULLY_TRANSPARENT = 0;
  VOCAL_MODE = 1;
}

message SoundModes {
  required AmbientSoundMode ambient_sound_mode = 1;
  required NoiseCancelingMode noise_canceling_mode = 2;
  required TransparencyMode transparency_mode = 3;
  required uint32 custom_noise_canceling = 4;
}
